# athenacli-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.plan/: README.md  phase-1-mvp.md  phase-2-completion.md  phase-3-special.md  phase-4-style.md  rust-migration-plan.md
athenacli/: Cargo.toml
athenacli-core/: Cargo.toml
athenacli-core/src/: athena.rs  auth.rs  cancel.rs  config.rs  exec.rs  lib.rs  prompt.rs
athenacli-core/src/completion/: completer.rs  engine.rs  metadata.rs  mod.rs  refresher.rs
athenacli-core/src/output/: mod.rs  pager.rs  table.rs
athenacli-core/src/parse/: mod.rs  scanner.rs
athenacli-core/src/special/: db.rs  download.rs  favorites.rs  io.rs  mod.rs
athenacli-core/src/style/: highlight.rs  keybindings.rs  mod.rs
athenacli/src/: cli.rs  main.rs  repl.rs
docs/: manual.md
