[workspace]
members = ["athenacli", "athenacli-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "BSD-3-Clause"
repository = "https://github.com/EugeneChung/athenacli-rs"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"
shellexpand = "3"
comfy-table = "7"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-athena = "1.109"
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
clap = { version = "4", features = ["derive", "env"] }
reedline = "0.48"
inquire = "0.9"

athenacli-core = { path = "athenacli-core" }
