[package]
name = "athenacli-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
directories.workspace = true
shellexpand.workspace = true
comfy-table.workspace = true
aws-config.workspace = true
aws-sdk-athena.workspace = true
aws-credential-types.workspace = true
reedline.workspace = true
arc-swap.workspace = true
